crates/mdt_cli/tests/snapshots/snapshots__include_empty_update_lib_rs.snap
---
source: crates/mdt_cli/tests/snapshots.rs
expression: lib_rs
---
//! <!-- {=docs|trim|linePrefix:"//! ":true} -->
//! 
//! First paragraph.
//! 
//! Second paragraph.
//! 
//! <!-- {/docs} -->

pub struct Lib;
