crates/mdt_cli/tests/snapshots/snapshots__include_empty_update_no_include_empty_rs.snap
---
source: crates/mdt_cli/tests/snapshots.rs
expression: no_include
---
/// <!-- {=docs|trim|linePrefix:"/// "} -->
/// 
/// First paragraph.

/// Second paragraph.
/// 
/// <!-- {/docs} -->
pub fn example() {}
