crates/mdt_cli/tests/snapshots/snapshots__init_existing_template.snap
---
source: crates/mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpt1R24Q
    - init
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Template file already exists: [TEMP_DIR]/template.t.md

----- stderr -----
