crates/mdt_cli/tests/snapshots/snapshots__init_fresh_directory_template.snap
---
source: crates/mdt_cli/tests/snapshots.rs
expression: template
---
<!-- {@greeting} -->

Hello from mdt! This is a provider block.

<!-- {/greeting} -->
