crates/mdt_cli/tests/snapshots/snapshots__list_blocks_verbose.snap
---
source: crates/mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpdmXRYz
    - "--verbose"
    - list
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Scanned project: 2 provider(s), 3 consumer(s)
  Providers:
    @apiDocs ([TEMP_DIR]/template.t.md)
    @greeting ([TEMP_DIR]/template.t.md)
Providers:
  @apiDocs template.t.md (1 consumer(s))
  @greeting template.t.md (2 consumer(s))

Consumers:
  =greeting lib.rs |trim|linePrefix [linked]
  =greeting readme.md [linked]
  =apiDocs readme.md |trim [linked]

2 provider(s), 3 consumer(s)

----- stderr -----
