crates/mdt_cli/tests/snapshots/snapshots__list_empty_project.snap
---
source: crates/mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpGFMqcK
    - list
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
No provider or consumer blocks found.

----- stderr -----
