crates/mdt_cli/tests/snapshots/snapshots__missing_provider_check.snap
---
source: crates/mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmp55jMRB
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: template.t.md:1:1: provider block `other_block` has no consumers
error: validation errors found
